--- a/index.html
+++ b/index.html
@@ -8,53 +8,60 @@
     body {
       font-family: Arial, sans-serif;
       background: url('marca-de-agua.png') no-repeat center center fixed;
-      background-size: contain;
-      background-color: #f0f8ff;
+      background-size: 300px;
+      background-color: #e6f2ff;
       margin: 0;
-      padding: 20px;
+      padding: 10px;
     }
     header {
       display: flex;
       align-items: center;
       justify-content: space-between;
       border-bottom: 2px solid #0074D9;
-      padding-bottom: 10px;
-      margin-bottom: 20px;
+      padding: 5px 10px;
     }
     header img {
-      height: 60px;
+      height: 50px;
     }
     h1 {
       color: #0074D9;
-      font-size: 24px;
+      font-size: 20px;
+      margin: 0;
+    }
+    form {
+      max-width: 600px;
+      margin: auto;
     }
     label {
       display: block;
-      margin-top: 10px;
+      margin-top: 8px;
       font-weight: bold;
+      font-size: 14px;
     }
     input, select, textarea {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
+      padding: 6px;
+      margin-top: 3px;
+      font-size: 14px;
       border: 1px solid #ccc;
       border-radius: 4px;
+    }
+    .button-group {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 15px;
     }
     button {
       background-color: #0074D9;
       color: white;
       border: none;
-      padding: 10px 20px;
-      margin-top: 20px;
-      cursor: pointer;
+      padding: 8px 12px;
+      font-size: 14px;
       border-radius: 4px;
+      cursor: pointer;
     }
     button:hover {
       background-color: #005fa3;
-    }
-    .button-group {
-      display: flex;
-      gap: 10px;
     }
   </style>
 </head>
@@ -66,13 +73,13 @@
 
   <form id="servicioForm">
     <label for="folio">Folio</label>
-    <input type="text" id="folio" name="folio" placeholder="Folio del servicio" />
+    <input type="text" id="folio" name="folio" readonly />
 
     <label for="fecha">Fecha</label>
-    <input type="date" id="fecha" name="fecha" />
+    <input type="date" id="fecha" name="fecha" readonly />
 
     <label for="hora">Hora</label>
-    <input type="time" id="hora" name="hora" />
+    <input type="time" id="hora" name="hora" readonly />
 
     <label for="solicitante">Solicitante</label>
     <input type="text" id="solicitante" name="solicitante" placeholder="¿Quién solicita el servicio?" />
@@ -82,6 +89,12 @@
 
     <label for="horaEstimada">Hora Estimada</label>
     <input type="time" id="horaEstimada" name="horaEstimada" />
+
+    <label for="origen">Lugar de Recogida</label>
+    <input type="text" id="origen" name="origen" placeholder="¿Dónde se recoge al cliente?" />
+
+    <label for="destino">Destino</label>
+    <input type="text" id="destino" name="destino" placeholder="¿A dónde se lleva al cliente?" />
 
     <label for="tipoServicio">Tipo de Servicio</label>
     <select id="tipoServicio" name="tipoServicio">
@@ -100,7 +113,7 @@
     </select>
 
     <label for="observaciones">Observaciones</label>
-    <textarea id="observaciones" name="observaciones" rows="4" placeholder="Detalles adicionales..."></textarea>
+    <textarea id="observaciones" name="observaciones" rows="3" placeholder="Detalles adicionales..."></textarea>
 
     <div class="button-group">
       <button type="submit">Guardar</button>
@@ -110,6 +123,14 @@
   </form>
 
   <script>
+    // Autocompletar fecha, hora y folio
+    window.onload = function() {
+      const now = new Date();
+      document.getElementById("fecha").value = now.toISOString().split("T")[0];
+      document.getElementById("hora").value = now.toTimeString().slice(0,5);
+      document.getElementById("folio").value = "F-" + now.getTime();
+    };
+
     function enviarFormulario() {
       alert("Formulario enviado.");
       // Aquí iría la lógica para enviar a Google Sheets
