--- a/index.html
+++ b/index.html
@@ -8,28 +8,22 @@
     body {
       font-family: Arial, sans-serif;
       background: url('marca-de-agua.png') no-repeat center center fixed;
-      background-size: 300px;
-      background-color: #e6f2ff;
+      background-size: 250px;
+      background-color: #f4faff;
       margin: 0;
       padding: 10px;
     }
     header {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      border-bottom: 2px solid #0074D9;
       padding: 5px 10px;
+      border-bottom: 2px solid #0074D9;
     }
     header img {
-      height: 50px;
-    }
-    h1 {
-      color: #0074D9;
-      font-size: 20px;
-      margin: 0;
+      height: 40px;
     }
     form {
-      max-width: 600px;
+      max-width: 500px;
       margin: auto;
     }
     label {
@@ -68,7 +62,6 @@
 <body>
   <header>
     <img src="logo.png" alt="Logotipo institucional" />
-    <h1>Captura de Servicios - Sitio de Taxis</h1>
   </header>
 
   <form id="servicioForm">
@@ -81,20 +74,20 @@
     <label for="hora">Hora</label>
     <input type="time" id="hora" name="hora" readonly />
 
-    <label for="solicitante">Solicitante</label>
-    <input type="text" id="solicitante" name="solicitante" placeholder="¿Quién solicita el servicio?" />
+    <label for="telefonista">Telefonista</label>
+    <input type="text" id="telefonista" name="telefonista" placeholder="Nombre del telefonista" />
 
-    <label for="personal">Personal Asignado</label>
-    <input type="text" id="personal" name="personal" placeholder="Nombre del conductor o responsable" />
-
-    <label for="horaEstimada">Hora Estimada</label>
-    <input type="time" id="horaEstimada" name="horaEstimada" />
-
-    <label for="origen">Lugar de Recogida</label>
-    <input type="text" id="origen" name="origen" placeholder="¿Dónde se recoge al cliente?" />
+    <label for="direccion">Dirección</label>
+    <input type="text" id="direccion" name="direccion" placeholder="Dirección de recogida" />
 
     <label for="destino">Destino</label>
-    <input type="text" id="destino" name="destino" placeholder="¿A dónde se lleva al cliente?" />
+    <input type="text" id="destino" name="destino" placeholder="Destino del cliente" />
+
+    <label for="personal">Personal Asignado</label>
+    <input type="text" id="personal" name="personal" placeholder="Nombre del conductor" />
+
+    <label for="telefono">Teléfono</label>
+    <input type="text" id="telefono" name="telefono" placeholder="Teléfono del cliente" />
 
     <label for="tipoServicio">Tipo de Servicio</label>
     <select id="tipoServicio" name="tipoServicio">
@@ -123,7 +116,6 @@
   </form>
 
   <script>
-    // Autocompletar fecha, hora y folio
     window.onload = function() {
       const now = new Date();
       document.getElementById("fecha").value = now.toISOString().split("T")[0];
@@ -133,18 +125,15 @@
 
     function enviarFormulario() {
       alert("Formulario enviado.");
-      // Aquí iría la lógica para enviar a Google Sheets
     }
 
     function finTurno() {
       alert("Turno finalizado.");
-      // Aquí iría la lógica para cerrar sesión o registrar fin de turno
     }
 
     document.getElementById("servicioForm").addEventListener("submit", function(e) {
       e.preventDefault();
       alert("Datos guardados.");
-      // Aquí iría la lógica para guardar en Google Sheets
     });
   </script>
 </body>
