--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <title>Captura de Servicios</title>
   <style>
+    :root {
+      --azul-fondo: #2E4A66;
+      --azul-boton: #1C3D5A;
+      --blanco: #ffffff;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #1C3D5A;
-      color: white;
-      background-image: url('marca-de-agua.png'); /* Reemplaza con la ruta del logo institucional */
+      background-color: var(--azul-fondo);
+      color: var(--blanco);
+      background-image: url('marca-de-agua.png'); /* Reemplaza con tu imagen */
       background-repeat: no-repeat;
       background-position: center;
       background-size: 400px;
@@ -17,24 +23,41 @@
     }
 
     .container {
-      max-width: 700px;
+      max-width: 800px;
       margin: 0 auto;
-      padding: 30px;
+      padding: 20px;
     }
 
     .logo {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .logo img {
-      height: 80px;
+      height: 70px;
+    }
+
+    .bienvenida {
+      text-align: center;
+      font-size: 16px;
+      margin-bottom: 20px;
     }
 
     h1 {
       text-align: center;
-      font-size: 24px;
-      margin-bottom: 30px;
+      font-size: 22px;
+      margin-bottom: 25px;
+    }
+
+    .fila-horizontal {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .campo {
+      flex: 1;
+      min-width: 100px;
     }
 
     label {
@@ -45,10 +68,23 @@
 
     input, select, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 8px;
       margin-top: 5px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      font-size: 14px;
+    }
+
+    input[disabled] {
+      background-color: #e0e0e0;
+      color: #333;
+    }
+
+    .asistencia {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #3a5a7a;
+      border-radius: 5px;
       font-size: 14px;
     }
 
@@ -56,61 +92,86 @@
       display: flex;
       justify-content: space-between;
       margin-top: 30px;
+      flex-wrap: wrap;
+      gap: 10px;
     }
 
     .buttons button {
-      background-color: #1C3D5A;
-      color: white;
-      border: none;
+      background-color: var(--azul-boton);
+      color: var(--blanco);
+      border: 2px solid var(--blanco);
       padding: 10px 20px;
       border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
+      flex: 1;
+      min-width: 100px;
     }
 
     .buttons button:hover {
       background-color: #16324a;
+    }
+
+    @media (max-width: 600px) {
+      .fila-horizontal {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="logo">
-      <img src="logo-sitio-herradura.png" alt="Sitio Herradura"> <!-- Reemplaza con tu logo -->
+      <img src="logo-sitio-herradura.png" alt="Sitio Herradura">
     </div>
+
+    <div class="bienvenida">
+      Bienvenido, Jesús Sánchez C. | Sitio Herradura
+    </div>
+
     <h1>CAPTURA DE SERVICIOS</h1>
 
-    <label>FOLIO *</label>
-    <input type="text" name="folio">
-
-    <label>FECHA *</label>
-    <input type="date" name="fecha">
-
-    <label>HORA *</label>
-    <input type="time" name="hora">
+    <div class="fila-horizontal">
+      <div class="campo">
+        <label>FOLIO *</label>
+        <input type="text" name="folio" value="F-1714113944435" disabled>
+      </div>
+      <div class="campo">
+        <label>FECHA *</label>
+        <input type="date" name="fecha" value="2024-04-26" disabled>
+      </div>
+      <div class="campo">
+        <label>HORA *</label>
+        <input type="time" name="hora" value="10:12" disabled>
+      </div>
+    </div>
 
     <label>TELEFONISTA *</label>
-    <input type="text" name="telefonista">
+    <input type="text" name="telefonista" value="Js">
 
     <label>DIRECCIÓN *</label>
-    <input type="text" name="direccion">
+    <input type="text" name="direccion" value="Z4">
 
     <label>DESTINO *</label>
-    <input type="text" name="destino">
+    <input type="text" name="destino" value="Interlomas">
 
     <label>ASIGNADO A *</label>
-    <input type="text" name="asignado">
+    <input type="text" name="asignado" value="Prueba">
 
     <label>TIPO DE SERVICIO *</label>
     <select name="tipo_servicio">
       <option value="">Selecciona una opción</option>
-      <option value="PASAR CORRIENTE">PASAR CORRIENTE</option>
+      <option value="PASAR CORRIENTE" selected>PASAR CORRIENTE</option>
       <option value="TRASLADO">TRASLADO</option>
       <option value="ESPERA">ESPERA</option>
     </select>
 
     <label>OBSERVACIONES</label>
     <textarea name="observaciones" rows="3"></textarea>
+
+    <div class="asistencia">
+      📋 Hoja de asistencia activa | Turno iniciado a las 07:00 AM
+    </div>
 
     <div class="buttons">
       <button>GUARDAR</button>
