--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <div style="max-width: 100%; margin: auto; padding: 10px; font-family: Arial, sans-serif; box-sizing: border-box;">
-  <h2 style="text-align: center;">Registro de Servicio</h2>
+  <h2 style="text-align: center;">CAPTURA DE SERVICIOS</h2>
 
   <div style="display: flex; flex-wrap: wrap; gap: 10px;">
     <input type="text" placeholder="Folio" style="flex: 1 1 30%; min-width: 100px; padding: 8px;">
     <input type="date" style="flex: 1 1 30%; min-width: 100px; padding: 8px;">
     <input type="time" style="flex: 1 1 30%; min-width: 100px; padding: 8px;">
+  </div>
+
+  <div style="margin-top: 10px;">
+    <input type="text" placeholder="Telefonista" style="width: 100%; padding: 8px;">
   </div>
 
   <div style="margin-top: 10px;">
@@ -16,7 +20,8 @@
   </div>
 
   <div style="margin-top: 15px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-    <button style="flex: 1 1 45%; min-width: 120px; padding: 10px; background-color: #007bff; color: white; border: none; border-radius: 4px;">Guardar</button>
-    <button style="flex: 1 1 45%; min-width: 120px; padding: 10px; background-color: #6c757d; color: white; border: none; border-radius: 4px;">Cancelar</button>
+    <button style="flex: 1 1 30%; min-width: 120px; padding: 10px; background-color: #007bff; color: white; border: none; border-radius: 4px;">GUARDAR</button>
+    <button style="flex: 1 1 30%; min-width: 120px; padding: 10px; background-color: #28a745; color: white; border: none; border-radius: 4px;">ENVIAR</button>
+    <button style="flex: 1 1 30%; min-width: 120px; padding: 10px; background-color: #6c757d; color: white; border: none; border-radius: 4px;">FIN DE TURNO</button>
   </div>
 </div>
