--- a/index.html
+++ b/index.html
@@ -1,27 +1,183 @@
-<div style="max-width: 100%; margin: auto; padding: 10px; font-family: Arial, sans-serif; box-sizing: border-box;">
-  <h2 style="text-align: center;">CAPTURA DE SERVICIOS</h2>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Captura de Servicios</title>
+  <style>
+    :root {
+      --azul-fondo: #2E4A66;
+      --azul-boton: #1C3D5A;
+      --blanco: #ffffff;
+    }
 
-  <div style="display: flex; flex-wrap: wrap; gap: 10px;">
-    <input type="text" placeholder="Folio" style="flex: 1 1 30%; min-width: 100px; padding: 8px;">
-    <input type="date" style="flex: 1 1 30%; min-width: 100px; padding: 8px;">
-    <input type="time" style="flex: 1 1 30%; min-width: 100px; padding: 8px;">
-  </div>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: var(--azul-fondo);
+      color: var(--blanco);
+      background-image: url('marca-de-agua.png'); /* Reemplaza con tu imagen */
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 400px;
+      background-attachment: fixed;
+    }
 
-  <div style="margin-top: 10px;">
-    <input type="text" placeholder="Telefonista" style="width: 100%; padding: 8px;">
-  </div>
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
 
-  <div style="margin-top: 10px;">
-    <input type="text" placeholder="Destino" style="width: 100%; padding: 8px;">
-  </div>
+    .logo {
+      text-align: center;
+      margin-bottom: 10px;
+    }
 
-  <div style="margin-top: 10px;">
-    <textarea placeholder="Observaciones" rows="3" style="width: 100%; padding: 8px;"></textarea>
-  </div>
+    .logo img {
+      height: 70px;
+    }
 
-  <div style="margin-top: 15px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-    <button style="flex: 1 1 30%; min-width: 120px; padding: 10px; background-color: #007bff; color: white; border: none; border-radius: 4px;">GUARDAR</button>
-    <button style="flex: 1 1 30%; min-width: 120px; padding: 10px; background-color: #28a745; color: white; border: none; border-radius: 4px;">ENVIAR</button>
-    <button style="flex: 1 1 30%; min-width: 120px; padding: 10px; background-color: #6c757d; color: white; border: none; border-radius: 4px;">FIN DE TURNO</button>
+    .bienvenida {
+      text-align: center;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 22px;
+      margin-bottom: 25px;
+    }
+
+    .fila-horizontal {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .campo {
+      flex: 1;
+      min-width: 100px;
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    input, select, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+
+    input[disabled] {
+      background-color: #e0e0e0;
+      color: #333;
+    }
+
+    .asistencia {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #3a5a7a;
+      border-radius: 5px;
+      font-size: 14px;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 30px;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .buttons button {
+      background-color: var(--azul-boton);
+      color: var(--blanco);
+      border: 2px solid var(--blanco);
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      flex: 1;
+      min-width: 100px;
+    }
+
+    .buttons button:hover {
+      background-color: #16324a;
+    }
+
+    @media (max-width: 600px) {
+      .fila-horizontal {
+        flex-direction: column;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="logo">
+      <img src="logo-sitio-herradura.png" alt="Sitio Herradura">
+    </div>
+
+    <div class="bienvenida">
+      Bienvenido, Jesús Sánchez C. | Sitio Herradura
+    </div>
+
+    <h1>CAPTURA DE SERVICIOS</h1>
+
+    <div class="fila-horizontal">
+      <div class="campo">
+        <label>FOLIO *</label>
+        <input type="text" name="folio" value="F-1714113944435" disabled>
+      </div>
+      <div class="campo">
+        <label>FECHA *</label>
+        <input type="date" name="fecha" value="2024-04-26" disabled>
+      </div>
+      <div class="campo">
+        <label>HORA *</label>
+        <input type="time" name="hora" value="10:12" disabled>
+      </div>
+    </div>
+
+    <label>TELEFONISTA *</label>
+    <input type="text" name="telefonista" value="Js">
+
+    <label>DIRECCIÓN *</label>
+    <input type="text" name="direccion" value="Z4">
+
+    <label>DESTINO *</label>
+    <input type="text" name="destino" value="Interlomas">
+
+    <label>ASIGNADO A *</label>
+    <input type="text" name="asignado" value="Prueba">
+
+    <label>TIPO DE SERVICIO *</label>
+    <select name="tipo_servicio">
+      <option value="">Selecciona una opción</option>
+      <option value="PASAR CORRIENTE" selected>PASAR CORRIENTE</option>
+      <option value="TRASLADO">TRASLADO</option>
+      <option value="ESPERA">ESPERA</option>
+    </select>
+
+    <label>OBSERVACIONES</label>
+    <textarea name="observaciones" rows="3"></textarea>
+
+    <div class="asistencia">
+      📋 Hoja de asistencia activa | Turno iniciado a las 07:00 AM
+    </div>
+
+    <div class="buttons">
+      <button>GUARDAR</button>
+      <button>ENVIAR</button>
+      <button>FIN DE TURNO</button>
+    </div>
   </div>
-</div>
+</body>
+</html>
