--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       background-position: center;
       background-size: 400px;
       background-attachment: fixed;
-      overflow-x: hidden; /* ✅ Evita desplazamiento horizontal */
+      overflow-x: hidden;
     }
 
     .container {
       max-width: 800px;
-      width: 100%; /* ✅ Se adapta al ancho de pantalla */
-      box-sizing: border-box; /* ✅ Incluye padding en el ancho total */
+      width: 100%;
+      box-sizing: border-box;
       margin: 0 auto;
       padding: 20px;
     }
@@ -40,10 +40,11 @@
       height: 70px;
     }
 
-    .bienvenida {
+    .bienvenida, .despedida {
       text-align: center;
       font-size: 16px;
       margin-bottom: 20px;
+      display: none;
     }
 
     h1 {
@@ -109,10 +110,12 @@
       cursor: pointer;
       flex: 1;
       min-width: 100px;
+      transition: background-color 0.3s, transform 0.2s;
     }
 
     .buttons button:hover {
       background-color: #16324a;
+      transform: scale(1.02);
     }
 
     @media (max-width: 600px) {
@@ -120,67 +123,137 @@
         flex-direction: column;
       }
     }
+
+    .caratula {
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .caratula input {
+      padding: 10px;
+      font-size: 16px;
+      width: 80%;
+      max-width: 300px;
+      margin-top: 10px;
+    }
+
+    .caratula button {
+      margin-top: 15px;
+      background-color: var(--azul-boton);
+      color: var(--blanco);
+      border: 2px solid var(--blanco);
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="logo">
-      <img src="logo-sitio-herradura.png" alt="Sitio Herradura">
+
+    <!-- Carátula de inicio -->
+    <div id="caratula" class="caratula">
+      <h2>Registro de Asistencia</h2>
+      <input type="text" id="nombreUsuario" placeholder="Ingresa tu nombre">
+      <br>
+      <button onclick="registrarAsistencia()">Registrar Asistencia</button>
     </div>
 
-    <div class="bienvenida">
-      Bienvenido, Jesús Sánchez C. | Sitio Herradura
-    </div>
+    <!-- Mensaje de bienvenida -->
+    <div id="bienvenida" class="bienvenida"></div>
 
-    <h1>CAPTURA DE SERVICIOS</h1>
-
-    <div class="fila-horizontal">
-      <div class="campo">
-        <label>FOLIO *</label>
-        <input type="text" name="folio" value="F-1714113944435" disabled>
+    <!-- Formulario principal -->
+    <div id="formulario" class="hidden">
+      <div class="logo">
+        <img src="logo-sitio-herradura.png" alt="Sitio Herradura">
       </div>
-      <div class="campo">
-        <label>FECHA *</label>
-        <input type="date" name="fecha" value="2024-04-26" disabled>
+
+      <h1>CAPTURA DE SERVICIOS</h1>
+
+      <div class="fila-horizontal">
+        <div class="campo">
+          <label>FOLIO *</label>
+          <input type="text" name="folio" value="F-1714113944435" disabled>
+        </div>
+        <div class="campo">
+          <label>FECHA *</label>
+          <input type="date" name="fecha" value="2024-04-26" disabled>
+        </div>
+        <div class="campo">
+          <label>HORA *</label>
+          <input type="time" name="hora" value="10:12" disabled>
+        </div>
       </div>
-      <div class="campo">
-        <label>HORA *</label>
-        <input type="time" name="hora" value="10:12" disabled>
+
+      <label>TELEFONISTA *</label>
+      <input type="text" name="telefonista" value="Js">
+
+      <label>DIRECCIÓN *</label>
+      <input type="text" name="direccion" value="Z4">
+
+      <label>DESTINO *</label>
+      <input type="text" name="destino" value="Interlomas">
+
+      <label>ASIGNADO A *</label>
+      <input type="text" name="asignado" value="Prueba">
+
+      <label>TIPO DE SERVICIO *</label>
+      <select name="tipo_servicio">
+        <option value="">Selecciona una opción</option>
+        <option>NORMAL</option>
+        <option>CARRO AMPLIO</option>
+        <option>CARRO SIN ROTULAR</option>
+        <option>CARRO ROTULAR</option>
+        <option>CAMBIO DE LLANTA</option>
+        <option>PASAR CORRIENTE</option>
+        <option>GUÍA</option>
+        <option>MENSAJERÍA</option>
+        <option>MENSAJERÍA COMPRAS</option>
+        <option>TRANSPORTE DE MASCOTA</option>
+      </select>
+
+      <label>OBSERVACIONES</label>
+      <textarea name="observaciones" rows="3"></textarea>
+
+      <div class="asistencia">
+        📋 Hoja de asistencia activa | Turno iniciado a las 07:00 AM
+      </div>
+
+      <div class="buttons">
+        <button>GUARDAR</button>
+        <button>ENVIAR</button>
+        <button onclick="finalizarTurno()">FIN DE TURNO</button>
       </div>
     </div>
 
-    <label>TELEFONISTA *</label>
-    <input type="text" name="telefonista" value="Js">
-
-    <label>DIRECCIÓN *</label>
-    <input type="text" name="direccion" value="Z4">
-
-    <label>DESTINO *</label>
-    <input type="text" name="destino" value="Interlomas">
-
-    <label>ASIGNADO A *</label>
-    <input type="text" name="asignado" value="Prueba">
-
-    <label>TIPO DE SERVICIO *</label>
-    <select name="tipo_servicio">
-      <option value="">Selecciona una opción</option>
-      <option value="PASAR CORRIENTE" selected>PASAR CORRIENTE</option>
-      <option value="TRASLADO">TRASLADO</option>
-      <option value="ESPERA">ESPERA</option>
-    </select>
-
-    <label>OBSERVACIONES</label>
-    <textarea name="observaciones" rows="3"></textarea>
-
-    <div class="asistencia">
-      📋 Hoja de asistencia activa | Turno iniciado a las 07:00 AM
-    </div>
-
-    <div class="buttons">
-      <button>GUARDAR</button>
-      <button>ENVIAR</button>
-      <button>FIN DE TURNO</button>
-    </div>
+    <!-- Mensaje de despedida -->
+    <div id="despedida" class="despedida">✅ Turno finalizado. Gracias por tu servicio.</div>
   </div>
+
+  <script>
+    function registrarAsistencia() {
+      const nombre = document.getElementById('nombreUsuario').value.trim();
+      if (nombre === "") {
+        alert("Por favor ingresa tu nombre.");
+        return;
+      }
+      document.getElementById('caratula').style.display = 'none';
+      document.getElementById('formulario').classList.remove('hidden');
+      document.getElementById('bienvenida').style.display = 'block';
+      document.getElementById('bienvenida').innerText = `Bienvenido, ${nombre} | Sitio Herradura`;
+    }
+
+    function finalizarTurno() {
+      document.getElementById('formulario').classList.add('hidden');
+      document.getElementById('despedida').style.display = 'block';
+      document.getElementById('caratula').style.display = 'block';
+      document.getElementById('bienvenida').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
